--- a/R0_tail/.obsidian/workspace
+++ b/R0_tail/.obsidian/workspace
@@ -8,8 +8,11 @@
         "type": "leaf",
         "active": true,
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "inf2/Стая.md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -46,7 +49,8 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -66,6 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "inf2/Стая.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -82,15 +87,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "Флакон грибнику/2 Крассный.md",
-    "Флакон грибнику/Грибник 7 Клара 1.md",
-    "Флакон грибнику/структура 1.0.md",
-    "Флакон грибнику/Грибник -0.9.md",
-    "Флакон грибнику/Грибник -1 Клара 0.md",
-    "Флакон грибнику/Грибник 2 Прядь 1.md",
-    "Флакон грибнику/Грибник 3 2 выпуск Ночь Сказок у младших.md",
-    "Флакон грибнику/Грибник 4 3 после выпуска  под холмами.md",
-    "23.1.21/последний круг/хроно последний круг.md",
-    "23.1.21/последний круг/2000/стая перчатка.md"
+    "inf2/Стая.md",
+    "inf2/структура 1.0 1.png.md",
+    "черновики/Предыстория Стаи/ральф дом омут.md",
+    "черновики/Предыстория Стаи/Mold интерлюдия Стая.md",
+    "черновики/Предыстория Стаи/1987 стая ссср.md",
+    "черновики/Предыстория Стаи/2 Крассный.md",
+    "черновики/Предыстория Стаи/грибник 3 черновики.md",
+    "черновики/Предыстория Стаи/Грибник 7 Клара 1.md",
+    "2010/Mold/0.4. Mold 1 .md",
+    "Флакон грибнику/2 Крассный.md"
   ]
 }
