--- a/R0_tail/.obsidian/workspace
+++ b/R0_tail/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "inf2/Стая.md",
+            "file": "2010/0.4. молд/0.4. молд 1 диалог прядь.md",
             "mode": "source"
           }
         }
@@ -49,8 +49,7 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -70,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "inf2/Стая.md",
+                "file": "2010/0.4. молд/0.4. молд 1 диалог прядь.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,15 +86,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "2010/0.4. молд/0.4. молд 1 диалог прядь.md",
+    "2010/0.4. молд/0.4. молд 11 .md",
+    "2010/0.4. молд/0.4. mold 10 .md",
+    "2010/0.4. молд/0.4. молд 1 диалог прядь .md",
     "inf2/Стая.md",
     "inf2/структура 1.0 1.png.md",
     "черновики/Предыстория Стаи/ральф дом омут.md",
     "черновики/Предыстория Стаи/Mold интерлюдия Стая.md",
     "черновики/Предыстория Стаи/1987 стая ссср.md",
-    "черновики/Предыстория Стаи/2 Крассный.md",
-    "черновики/Предыстория Стаи/грибник 3 черновики.md",
-    "черновики/Предыстория Стаи/Грибник 7 Клара 1.md",
-    "2010/Mold/0.4. Mold 1 .md",
-    "Флакон грибнику/2 Крассный.md"
+    "черновики/Предыстория Стаи/2 Крассный.md"
   ]
 }
