--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -8,8 +8,11 @@
         "type": "leaf",
         "active": true,
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "R0_tail/now work/0.5/0.5. Mold. Часть 1. v0.95..md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -66,6 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "R0_tail/now work/0.5/0.5. Mold. Часть 1. v0.95..md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -82,15 +86,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "R0_tail/inf2/история.md",
-    "R0_tail/структура 1.0.md",
+    "R0_tail/now work/0.5/0.5. Mold. Часть 1. v0.95..md",
+    "R0_tail/now work/0.5/5. лаба лунг .md",
+    "R0_tail/now work/0.5/0-4 0.5. Mold. Часть 1. v0.95..md",
     "R0_tail/now work/0.5/5 неф+ом 0.5. молд. часть 1. v0.1. .md",
+    "R0_tail/now work/0.5/0-3 0.5. Mold. Часть 1. v0.2. .md",
     "R0_tail/now work/0.5/4 бордель 0.5. Mold. Часть 1. v0.1. .md",
+    "R0_tail/структура 1.0.md",
+    "R0_tail/inf2/история.md",
     "R0_tail/now work/0.5/3 встреча 0.5. Mold. Часть 1. v0.1. .md",
-    "R0_tail/now work/0.5/01 рум тейла до церкви 0.5. Mold. Часть 1. v0.2. .md",
-    "R0_tail/now work/0.5/черновик убежыще проверка. .md",
-    "R0_tail/now work/0.5/черновик омут фон 0.5. рекет .md",
-    "R0_tail/now work/0.5/2. мак церковь .md",
-    "R0_tail/now work/0.5/0 ейсид рум 0.5. Mold. Часть 1. v0.1. .md"
+    "R0_tail/now work/0.5/01 рум тейла до церкви 0.5. Mold. Часть 1. v0.2. .md"
   ]
 }
