--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "779d8bf62835059e",
+        "id": "02b02fe6806d248d",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "R0_tail/old chapteers/after beta & i/0.5. Mold. Часть 1. v1.1..md",
-            "mode": "preview"
+            "file": "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/structure2/6.гриб+неф+апп.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "R0_tail/old chapteers/after beta & i/0.5. Mold. Часть 1. v1.1..md",
+                "file": "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/structure2/6.гриб+неф+апп.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "779d8bf62835059e",
+  "active": "02b02fe6806d248d",
   "lastOpenFiles": [
-    "R0_tail/old chapteers/after beta & i/0.5. Mold. Часть 1. v1.0..md",
-    "R0_tail/now work/0.5/0.5. Mold. Часть 1. v0.95..md",
-    "R0_tail/now work/0.5/5. лаба лунг .md",
-    "R0_tail/now work/0.5/0-4 0.5. Mold. Часть 1. v0.95..md",
-    "R0_tail/now work/0.5/5 неф+ом 0.5. молд. часть 1. v0.1. .md",
-    "R0_tail/now work/0.5/0-3 0.5. Mold. Часть 1. v0.2. .md",
-    "R0_tail/now work/0.5/4 бордель 0.5. Mold. Часть 1. v0.1. .md",
-    "R0_tail/структура 1.0.md",
-    "R0_tail/inf2/история.md",
-    "R0_tail/now work/0.5/3 встреча 0.5. Mold. Часть 1. v0.1. .md"
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/structure2/Untitled.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/фон панацея.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/програмирование коробки.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/Выверт.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/6. подготовка к письму.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/5.5. бордель крыша контакт летуны.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/5. согласие неф атак бордель захват.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/4.5. контра сплетницы.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/4. скп осмотр статус директор.md",
+    "R0_tail/now work/0.1.2. 0.5. Mold. Часть 2. v0.1/3. спик рыжый, отель ноут куратор.md"
   ]
 }
