--- a/R0_tail/n8/Тремор/.obsidian/workspace
+++ b/R0_tail/n8/Тремор/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Вход/лиза/реридено/0. лиза комната.md",
+            "file": "Вход/Структура. Вход.md",
             "mode": "source"
           }
         }
@@ -74,7 +74,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Вход/лиза/реридено/0. лиза комната.md",
+                "file": "Вход/Структура. Вход.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,19 +89,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "active": "8bf27db2bbc7a17e",
   "lastOpenFiles": [
-    "Вход/лиза/реридено/0. лиза комната.md",
-    "Вход/лиза/сцены/Untitled.md",
-    "Вход/лиза/сцены/старт.md",
-    "Вход/лиза/сцены/0. Бриффинг.md",
-    "Вход/Структура. Вход..md",
-    "Вход/лиза/Тремор Ливси/Тремор Tats.md",
-    "Вход/лиза/Структура. Вход. Tats..md",
-    "Вход/лиза/реридено/лиза структура.md",
-    "Вход/лиза/реридено/лиза старо.md",
-    "Вход/лиза/реридено/лиза лес.md"
+    "Вход/Структура. Вход.md",
+    "Вход/Вход. Hijack./Жан-Поль/Алек/Структура. Hijack.md",
+    "Вход/Вход. Hijack./Вход. Hijack.md",
+    "Вход/Вход. Hijack./Жан-Поль/Алек/Структура. Вход. Hijack..md",
+    "Вход/Вход. Hijack./Вход. Hijack..md",
+    "Вход/лиза/Протоколы противодействия Перекидышам..md",
+    "Вход/лиза/Лизе известно про Рыжего.md",
+    "Вход/лиза/Цели поставленные перед лизой заказчиком.md",
+    "Вход/лиза/Лизе известно про Бледного.md",
+    "Вход/лиза/Untitled.md"
   ]
 }
