--- a/R0_tail/n8/Тремор/.obsidian/workspace
+++ b/R0_tail/n8/Тремор/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Вход/Структура. Вход.md",
+            "file": "4. выход/Выход.md",
             "mode": "source"
           }
         }
@@ -74,7 +74,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Вход/Структура. Вход.md",
+                "file": "4. выход/Выход.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,15 +94,15 @@
   },
   "active": "8bf27db2bbc7a17e",
   "lastOpenFiles": [
-    "Вход/Структура. Вход.md",
-    "Вход/Вход. Hijack./Жан-Поль/Алек/Структура. Hijack.md",
-    "Вход/Вход. Hijack./Вход. Hijack.md",
-    "Вход/Вход. Hijack./Жан-Поль/Алек/Структура. Вход. Hijack..md",
-    "Вход/Вход. Hijack./Вход. Hijack..md",
-    "Вход/лиза/Протоколы противодействия Перекидышам..md",
-    "Вход/лиза/Лизе известно про Рыжего.md",
-    "Вход/лиза/Цели поставленные перед лизой заказчиком.md",
-    "Вход/лиза/Лизе известно про Бледного.md",
-    "Вход/лиза/Untitled.md"
+    "0. Вход/Выход.md",
+    "13.md",
+    "loss from R0 to n8.md",
+    "Плато.md",
+    "Чистилище навь.md",
+    "Вход/лиза/Тремор Ливси/1. Слежка Алек Браян Дрём Гриб.md",
+    "Вход/лиза/Тремор Ливси/0. Результаты слежки..md",
+    "Вход/лиза/Тремор Ливси/Untitled.md",
+    "Вход/лиза/Тремор Ливси/Tats.md",
+    "Вход/лиза/Структура. Вход. Tats..md"
   ]
 }
