--- a/R0_tail/n8/Тремор/.obsidian/workspace
+++ b/R0_tail/n8/Тремор/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "4. выход/Выход.md",
+            "file": "0. Вход/лиза/Тремор Ливси/Структура. Вход. Tats..md",
             "mode": "source"
           }
         }
@@ -37,7 +37,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 297
+    "width": 227
   },
   "right": {
     "id": "dbe4fc284ef6bbea",
@@ -74,7 +74,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "4. выход/Выход.md",
+                "file": "0. Вход/лиза/Тремор Ливси/Структура. Вход. Tats..md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,15 +94,15 @@
   },
   "active": "8bf27db2bbc7a17e",
   "lastOpenFiles": [
-    "0. Вход/Выход.md",
-    "13.md",
-    "loss from R0 to n8.md",
-    "Плато.md",
-    "Чистилище навь.md",
-    "Вход/лиза/Тремор Ливси/1. Слежка Алек Браян Дрём Гриб.md",
-    "Вход/лиза/Тремор Ливси/0. Результаты слежки..md",
-    "Вход/лиза/Тремор Ливси/Untitled.md",
-    "Вход/лиза/Тремор Ливси/Tats.md",
-    "Вход/лиза/Структура. Вход. Tats..md"
+    "0. Вход/лиза/Тремор Ливси/Структура. Вход. Tats..md",
+    "0. Вход/лиза/Доклады/Доклад о Перекидышах.md",
+    "0. Вход/лиза/Доклады/0. досье перекидышей.md",
+    "0. Вход/лиза/Доклады/Доклад.md",
+    "0. Вход/лиза/сцены/смс лиза бледный смерть пряди.md",
+    "0. Вход/лиза/сцены/старт.md",
+    "0. Вход/лиза/сцены/2. Муравейник Гриб.md",
+    "0. Вход/лиза/Тремор Ливси/0. Диалог РегентМрак + грибДрём.md",
+    "0. Вход/лиза/Тремор Ливси/0. Результаты слежки..md",
+    "0. Вход/лиза/Тремор Ливси/0. досье перекидышей.md"
   ]
 }
