--- a/R0_tail/n8/.obsidian/workspace
+++ b/R0_tail/n8/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Тремор/0. Вход/лиза/Tats.md",
+            "file": "Тремор/0. Вход/лиза/2. Tats.md",
             "mode": "source"
           }
         }
@@ -52,7 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 236
   },
   "right": {
     "id": "688708a5a78bfd0f",
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Тремор/0. Вход/лиза/Tats.md",
+                "file": "Тремор/0. Вход/лиза/2. Tats.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "9a5522cda8405dda",
   "lastOpenFiles": [
+    "Тремор/0. Вход/лиза/2. Tats.md",
+    "Тремор/0. Вход/лиза/1.tats.md",
+    "Тремор/0. Вход/лиза/Untitled.md",
     "Тремор/0. Вход/лиза/Tats.md",
-    "Тремор/0. Вход/лиза/Цели поставленные перед лизой заказчиком.md",
-    "Тремор/0. Вход/лиза/сцены/8. Вопросы от Перекидышей о силе Лизы.md",
-    "Тремор/0. Вход/лиза/сцены/7. Вопросы Перекидышам о прошлом.md",
-    "Тремор/0. Вход/лиза/сцены/5. Вопросы Перекидышам о Пряди.md",
-    "Тремор/0. Вход/лиза/сцены/3. Муравейник Игра.md",
     "Тремор/0. Вход/лиза/сцены/2. Муравейник Гриб.md",
-    "Тремор/0. Вход/лиза/сцены/0. Результаты слежки..md",
     "Тремор/0. Вход/лиза/сцены/1. Слежка Алек Браян Дрём Гриб.md",
-    "Тремор/0. Вход/лиза/сцены/0. Диалог Мак Арлекин отвлечение.md"
+    "Тремор/0. Вход/лиза/сцены/0. Результаты слежки..md",
+    "Тремор/0. Вход/лиза/сцены/0. Диалог РегентМрак + грибДрём.md",
+    "Тремор/0. Вход/лиза/сцены/0. Диалог Мак Арлекин отвлечение.md",
+    "Тремор/0. Вход/лиза/Доклады/Протоколы противодействия Перекидышам..md"
   ]
 }
