--- a/R0_tail/n8/.obsidian/workspace
+++ b/R0_tail/n8/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Тремор/0. Вход/лиза/2. Tats.md",
+            "file": "Тремор/0. Вход/лиза/Доклады/старт.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Тремор/0. Вход/лиза/2. Tats.md",
+                "file": "Тремор/0. Вход/лиза/Доклады/старт.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "9a5522cda8405dda",
   "lastOpenFiles": [
-    "Тремор/0. Вход/лиза/2. Tats.md",
-    "Тремор/0. Вход/лиза/1.tats.md",
-    "Тремор/0. Вход/лиза/Tats.md",
     "Тремор/0. Вход/лиза/Доклады/старт.md",
+    "Тремор/0. Вход/лиза/Доклады/стая/Протоколы противодействия Перекидышам..md",
+    "Тремор/0. Вход/лиза/2. Tats.md",
+    "Тремор/0. Вход/лиза/Доклады/стая/Стая Досъе.md",
+    "Тремор/0. Вход/лиза/Доклады/стая/изломПерекидышей.md",
+    "Тремор/0. Вход/лиза/1. Tats.md",
+    "Тремор/0. Вход/лиза/0. Tats.md",
+    "Тремор/0. Вход/лиза/Доклады/стая/Клара Самозванка.md",
     "Тремор/0. Вход/лиза/Доклады/структура стаи.md",
-    "Тремор/0. Вход/лиза/сцены/8. Вопросы от Перекидышей о силе Лизы.md",
-    "Тремор/0. Вход/лиза/сцены/7. Вопросы Перекидышам о прошлом.md",
-    "Тремор/0. Вход/лиза/сцены/5. Вопросы Перекидышам о Пряди.md",
-    "Тремор/0. Вход/лиза/сцены/3. Муравейник Игра.md",
-    "Тремор/0. Вход/лиза/сцены/2. Муравейник Гриб.md"
+    "Тремор/0. Вход/лиза/Доклады/смс лиза бледный смерть пряди.md"
   ]
 }
