will end stepik js for beginer

--- a/R0_tail/n8/.obsidian/workspace
+++ b/R0_tail/n8/.obsidian/workspace
@@ -1,15 +1,15 @@
 {
   "main": {
-    "id": "0789aa0b2b0eda3f",
+    "id": "e98304e69937917a",
     "type": "split",
     "children": [
       {
-        "id": "9a5522cda8405dda",
+        "id": "b6b218deb8b64199",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Тремор/0. Вход/лиза/Доклады/старт.md",
+            "file": "Тремор/0. Вход/лиза/коммуникация Бледный Рыжий Морт.md",
             "mode": "source"
           }
         }
@@ -18,15 +18,15 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "6150a27d513caaa2",
+    "id": "3384841e80466688",
     "type": "split",
     "children": [
       {
-        "id": "6b7914b227059225",
+        "id": "0eea02fc2b1545fe",
         "type": "tabs",
         "children": [
           {
-            "id": "6e7b9b356ff0c647",
+            "id": "02ec8065307c764c",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -34,7 +34,7 @@
             }
           },
           {
-            "id": "03cdf30b05795c22",
+            "id": "23a26a6dcf6db0a6",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -52,23 +52,23 @@
       }
     ],
     "direction": "horizontal",
-    "width": 199
+    "width": 300
   },
   "right": {
-    "id": "688708a5a78bfd0f",
+    "id": "3732513f9fe6233b",
     "type": "split",
     "children": [
       {
-        "id": "c4d578e231280f2c",
+        "id": "58fa0bc9d1b4d2a4",
         "type": "tabs",
         "children": [
           {
-            "id": "4c05572c45c3da4b",
+            "id": "b3b1754ca739ad89",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Тремор/0. Вход/лиза/Доклады/старт.md",
+                "file": "Тремор/0. Вход/лиза/коммуникация Бледный Рыжий Морт.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "9a5522cda8405dda",
+  "active": "b6b218deb8b64199",
   "lastOpenFiles": [
-    "Тремор/0. Вход/лиза/Доклады/старт.md",
-    "Тремор/0. Вход/лиза/Доклады/стая/Протоколы противодействия Перекидышам..md",
+    "Тремор/0. Вход/лиза/коммуникация Бледный Рыжий Морт.md",
+    "Тремор/0. Вход/лиза/лиза лес.md",
+    "Тремор/0. Вход/лиза/нужно сказать.md",
     "Тремор/0. Вход/лиза/2. Tats.md",
-    "Тремор/0. Вход/лиза/Доклады/стая/Стая Досъе.md",
-    "Тремор/0. Вход/лиза/Доклады/стая/изломПерекидышей.md",
     "Тремор/0. Вход/лиза/1. Tats.md",
     "Тремор/0. Вход/лиза/0. Tats.md",
-    "Тремор/0. Вход/лиза/Доклады/стая/Клара Самозванка.md",
+    "Тремор/0. Вход/лиза/нузно сказать.md",
+    "Тремор/0. Вход/лиза/Untitled.md",
     "Тремор/0. Вход/лиза/Доклады/структура стаи.md",
-    "Тремор/0. Вход/лиза/Доклады/смс лиза бледный смерть пряди.md"
+    "Тремор/0. Вход/лиза/Доклады/лиза структура.md"
   ]
 }
