--- a/R0_tail/n8/.obsidian/workspace
+++ b/R0_tail/n8/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Тремор/0. Вход/лиза/коммуникация Бледный Рыжий Морт.md",
+            "file": "Тремор/0. Вход/Hijack/Hijack.md",
             "mode": "source"
           }
         }
@@ -52,7 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 262
   },
   "right": {
     "id": "3732513f9fe6233b",
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Тремор/0. Вход/лиза/коммуникация Бледный Рыжий Морт.md",
+                "file": "Тремор/0. Вход/Hijack/Hijack.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "b6b218deb8b64199",
   "lastOpenFiles": [
-    "Тремор/0. Вход/лиза/коммуникация Бледный Рыжий Морт.md",
-    "Тремор/0. Вход/лиза/лиза лес.md",
-    "Тремор/0. Вход/лиза/нужно сказать.md",
-    "Тремор/0. Вход/лиза/2. Tats.md",
-    "Тремор/0. Вход/лиза/1. Tats.md",
-    "Тремор/0. Вход/лиза/0. Tats.md",
-    "Тремор/0. Вход/лиза/нузно сказать.md",
-    "Тремор/0. Вход/лиза/Untitled.md",
-    "Тремор/0. Вход/лиза/Доклады/структура стаи.md",
-    "Тремор/0. Вход/лиза/Доклады/лиза структура.md"
+    "Тремор/0. Вход/Hijack/Hijack.md",
+    "Тремор/0. Вход/лиза/Tats.md",
+    "Тремор/0. Вход/лиза/Доклады/стая/Стая Досъе.md",
+    "Тремор/1. (навь) Чистилище/томас/томас.md",
+    "Тремор/1. (навь) Чистилище/фея/Фея.md",
+    "Тремор/1. (навь) Чистилище/Чистилище навь.md",
+    "Тремор/0. Вход/лиза/Структура. Tats..md",
+    "Тремор/0. Вход/Hijack/Структура. Hijack.md",
+    "Сплетница/Лиза.md",
+    "Тремор/0. Вход/Структура. Вход.md"
   ]
 }
