freecodecamp pattern algorithm

--- a/R0_tail/n8/.obsidian/workspace
+++ b/R0_tail/n8/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Тремор/0. Вход/Hijack/Hijack.md",
+            "file": "Тремор/0. Вход/лиза/Tats.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Тремор/0. Вход/Hijack/Hijack.md",
+                "file": "Тремор/0. Вход/лиза/Tats.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,8 +88,8 @@
   },
   "active": "b6b218deb8b64199",
   "lastOpenFiles": [
-    "Тремор/0. Вход/Hijack/Hijack.md",
     "Тремор/0. Вход/лиза/Tats.md",
+    "Тремор/0. Вход/Hijack/Hijack.md",
     "Тремор/0. Вход/лиза/Доклады/стая/Стая Досъе.md",
     "Тремор/1. (навь) Чистилище/томас/томас.md",
     "Тремор/1. (навь) Чистилище/фея/Фея.md",
